# plaid-rust

./: Cargo.toml
src/: lib.rs
src/api/: error.rs  mfa.rs  user.rs
src/api/client/: mod.rs  payload.rs  response.rs
src/api/data/: account.rs  address.rs  email.rs  phone_number.rs  transaction.rs
src/api/product/: auth.rs  balance.rs  connect.rs  income.rs  info.rs  mod.rs
