[package]
name = "plaid"
version = "0.2.0"
authors = ["Nathan Kot <me@nathankot.com>"]
description = "Rust bindings for the Plaid API."
readme = "README.md"
documentation = "http://nathankot.com/plaid-rust/master/plaid/index.html"
license = "MIT"
repository = "https://github.com/nathankot/plaid-rust"
keywords = ["api", "plaid"]

[dependencies]
rustc-serialize = "0.3"
hyper = "0.12.2"
http = "0.1.5"

[dev-dependencies]
yup-hyper-mock = "3.12.0"
log = "0.3"
