[package]
name = "plaid"
version = "0.2.0"
authors = ["Nathan Kot <me@nathankot.com>"]
description = "Rust bindings for the Plaid API."
readme = "README.md"
documentation = "http://nathankot.com/plaid-rust/master/plaid/index.html"
license = "MIT"
repository = "https://github.com/nathankot/plaid-rust"
keywords = ["api", "plaid"]

[dependencies]
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
hyper = "0.12.2"
http = "0.1.5"

[dev-dependencies]
yup-hyper-mock = "3.12.0"
log = "0.3"
